	* [worksheet] Improve axes major and minor tick settings
	* [spreadsheet] show infinite values as such and not as NaN
	* [spreadsheet] support big integer (64 bit) as data type
	* [spreadsheet] column normalization methods "divide by max", "divide by min", etc.
	* [spreadsheet] added the size of the data set, its mode, 1st and 3rd quartiles and IQR to the column statistics
	* Allow to open Cantor and Jupyter projects
	* [Windows] improved craft blueprint and installer package

Bug fixes:
    BUG: 421193 - import float(4) data from hdf5
    BUG: 418390 - Ignore infinite values (created in CAS worksheets for example) in curves
    BUG: 412455 - Don't crash (sporadically) when opening the color scheme menu
    BUG: 415214 - Better algorithm to draw the error bar caps
    BUG: 413397 - Properly handle removal of columns in the spreadsheet model
    BUG: 413401 - In plot data dialog, don't add new worksheets as children to workbooks, use the proper parent aspect
    * Fix Cantor support and unicode characters on Windows
    * Fix evaluating fit residuals

-----2.7 (24.10.2019)-----
New features:
	* Allow to move objects (drag&drop) to different folders in the project explorer
	* [spreadsheet] allow to insert multiple rows and columns in one step
	* [spreadsheet] improved the handling of calculated columns (values calculated via a formula):
		* Allow to automatically update the calculated column on data changes in the variable columns
		* Invalidate the calculated column if one of the variable columns was deleted
		* In "Functions Values" dialog highlight the variable column combobox red if the variable column was deleted in the project
		* In "Functions Values" dialog don't allow to select columns to be calculated as variable columns (avoid circular dependencies)
		* In "Used in" context menu of a column show all other calculated columns where this column is used as a variable